# remindr

./: CLAUDE.md  Cargo.toml  README.md  update.sh
artifacts/: demo.json
crates/gpui/: Cargo.toml
crates/gpui-nav/: .gitignore  Cargo.toml  LICENSE  README.md
crates/gpui-nav/src/: context.rs  lib.rs  navigator.rs  screen.rs  tests.rs
crates/gpui/artifacts/: demo.json
crates/gpui/src/: lib.rs  main.rs
crates/gpui/src/app/: mod.rs  remindr.rs
crates/gpui/src/app/components/: code_window.rs  confirm_dialog.rs  layout.rs  mod.rs  node_code_renderer.rs  node_config_menu.rs  node_renderer.rs  settings_dialog.rs  sidebar.rs  slash_menu.rs  title_bar.rs
crates/gpui/src/app/components/nodes/: element.rs  menu_provider.rs  mod.rs  node.rs  textual_node.rs
crates/gpui/src/app/components/nodes/divider/: divider_node.rs
crates/gpui/src/app/components/nodes/heading/: heading_node.rs
crates/gpui/src/app/components/nodes/text/: text_node.rs
crates/gpui/src/app/screens/: document_screen.rs  mod.rs
crates/gpui/src/app/states/: document_state.rs  node_state.rs  repository_state.rs  settings_state.rs
crates/gpui/src/components/: node_renderer.rs  slash_menu.rs
crates/gpui/src/controllers/: drag_controller.rs
crates/gpui/src/domain/: ports.rs
crates/gpui/src/domain/database/: document.rs  folder.rs  mod.rs
crates/gpui/src/domain/entities/settings/: mod.rs
crates/gpui/src/entities/: document_parser.rs
crates/gpui/src/entities/nodes/: mod.rs  node.rs
crates/gpui/src/entities/nodes/divider/: data.rs  divider_node.rs
crates/gpui/src/entities/nodes/heading/: data.rs  heading_node.rs
crates/gpui/src/entities/nodes/text/: data.rs  mod.rs  text_node.rs
crates/gpui/src/entities/ui/: mod.rs
crates/gpui/src/entities/ui/menu/: mod.rs
crates/gpui/src/entities/ui/nodes/: mod.rs
crates/gpui/src/entities/ui/nodes/divider/: data.rs  divider_node.rs  mod.rs
crates/gpui/src/entities/ui/nodes/heading/: data.rs  heading_node.rs  mod.rs
crates/gpui/src/entities/ui/nodes/text/: data.rs  text_node.rs
crates/gpui/src/infrastructure/entities/: mod.rs
crates/gpui/src/infrastructure/repositories/: document_repository.rs  folder_repository.rs
crates/gpui/src/screens/: main_screen.rs
crates/gpui/src/screens/parts/: document.rs
crates/gpui/src/states/: document_state.rs  node_state.rs
crates/remindr/: Cargo.toml
crates/remindr/migrations/: 20260129000000_add_folders.up.sql
crates/remindr/src/: lib.rs  main.rs
crates/remindr/src/app/: remindr.rs
crates/remindr/src/app/components/: code_window.rs  confirm_dialog.rs  mod.rs  node_config_menu.rs  node_renderer.rs  rich_text.rs  settings_dialog.rs  sidebar.rs  slash_menu.rs  title_bar.rs
crates/remindr/src/app/components/nodes/: element.rs  menu_provider.rs  textual_node.rs
crates/remindr/src/app/components/nodes/heading/: heading_node.rs
crates/remindr/src/app/components/nodes/text/: text_node.rs
crates/remindr/src/app/screens/: document_screen.rs  home_screen.rs  mod.rs
crates/remindr/src/app/states/: app_state.rs  document_state.rs  node_state.rs  settings_state.rs
crates/remindr/src/domain/: ports.rs
crates/remindr/src/domain/database/: document.rs
crates/remindr/src/infrastructure/repositories/: document_repository.rs  folder_repository.rs  mod.rs
crates/router/: Cargo.toml
crates/router-macros/: Cargo.toml
crates/router-macros/src/: derive_into_layout.rs  lib.rs
crates/router/src/: hooks.rs  layout.rs  lib.rs  nav_link.rs  outlet.rs  route.rs  router.rs  router_tests.rs  routes.rs  state.rs
src/: lib.rs  main.rs
src/controllers/: drag_controller.rs
src/entities/: document_parser.rs  mod.rs
src/screens/: main_screen.rs
src/states/: document_state.rs
(+11 files in other folders)
