[workspace.package]
version = "0.1.0"
edition = "2024"
publish = false

[workspace]
members = ["crates/remindr","crates/gpui-nav","crates/router", "crates/router-macros"]
resolver = "2"
default-members = ["crates/remindr"]

[workspace.dependencies]
# 本地仓
gpui-nav={path="crates/gpui-nav"}
gpui-router = { path = "crates/router" }
gpui-router-macros = { path = "crates/router-macros" }

gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["font-kit"] }
gpui_macros = { git = "https://github.com/zed-industries/zed" }
gpui-component = { git = "https://github.com/linruohan/gpui-component.git" }
gpui-component-assets = { git = "https://github.com/linruohan/gpui-component.git" }

hashbrown = "0.16.0"
proc-macro2 = "1.0.105"
quote = "1.0.43"
smallvec = "1.15.1"
syn = "2.0.110"

rust-embed = "8.11.0"
serde = "1.0.228"
serde_json = "1.0.149"
smol = "2.0.2"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "derive", "migrate", "uuid", "chrono", "json"] }
tokio = { version = "1.49", features = ["full"] }
uuid = { version = "1.21.0", features = ["v7"] }

anyhow = "1.0.102"
chrono = "0.4.43"
dirs = "6.0.0"