[package]
name = "remindr_gpui"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
gpui = "0.2.1"
gpui-component = "0.3.1"
rust-embed = "8.7.2"
serde = "1.0.228"
serde_json = "1.0.145"
unicode-segmentation = "1.12.0"
uuid = { version = "1.18.1", features = ["v7"] }
